--- a/index.html
+++ b/index.html
@@ -547,6 +547,13 @@
 
               <figure>
                 <figcaption>
+                  <a href="#">TA</a>
+                </figcaption>
+                <img src="assets/friends/TA.png" class="friend-pic" alt="TA" />
+              </figure>
+
+              <figure>
+                <figcaption>
                   <a href="#">YJO</a>
                 </figcaption>
                 <img
